[package]
name = "nes"
version = "0.1.0"
authors = ["Koji Ota"]

[features]
dump = []
print_cpu_instruction = []

[dependencies]
error-chain = "0.11.0"
piston = "0.35.0"
piston2d-graphics = "0.25.0"
pistoncore-glutin_window = "0.43.0"
pistoncore-sdl2_window = "0.48.0"
piston2d-opengl_graphics = "0.51.0"
piston_window = "0.75.0"
image = "0.18"
gl = "0.10.0"
